# mock_disk_full

./: .gitignore  README.md  pyproject.toml  requirements.txt
mock_disk_full/: __init__.py  __main__.py  cli.py  disk_info.py  filler.py
